# ConwaysGameOfLife

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/msvc/: alloca.h
src/: CMakeLists.txt  components.h  game.cpp  game.h  main.cpp  pch.h  shader.cpp  shader.h  texture.cpp  texture.h  utils.h
src/shaders/: CMakeLists.txt  fs_texture.sc  varying.def.sc  vs_texture.sc
src/window/: metal_window.h  metal_window.mm  window.cpp  window.h
tools/: aggregate_shaders  aggregate_shaders.py
